--- a/FragmentCommunication/app/src/main/res/layout-land/activity_main.xml
+++ b/FragmentCommunication/app/src/main/res/layout-land/activity_main.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation ="horizontal" >
 
-    <FrameLayout
-        android:id="@+id/frameLayoutMaster"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <FrameLayout android:id ="@+id/frameLayoutMaster"
+        android:layout_width ="0dp"
+        android:layout_weight ="1"
+        android:layout_height ="match_parent" />
 
-    </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout android:id="@+id/frameLayoutDetail"
+        android:layout_width ="0dp"
+        android:layout_weight ="1"
+        android:layout_height ="match_parent" />
+</LinearLayout>
